--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "IMG_1344.png"
   name             : "Frida Mudsam"
   pronouns         : "she/her"  
-  bio              : "PhD Student in the Information Science"
+  bio              : "PhD Student in Information Science"
   location         : "Boulder, Colroado"
   employer         : "University of Colorado - Boulder"
   uri              : # URL
